--- a/_config.yml
+++ b/_config.yml
@@ -17,10 +17,10 @@
 
 # Language of your content in 2-letter code, e.g.: en, de.
 # You may also provide a location, e.g.: en-us, de_AT.
-lang:                  en
+lang:                  zh
 
 # The title of your blog. Used in the sidebar and the browser tab.
-title:                 Starter Kit
+title:                 花 / 垂天云
 
 # A short description (~150 chars) of the page used for the meta description tag.
 # Can use markdown, but no more than one paragraph (enforced by `>`)
@@ -29,45 +29,53 @@ description:           >
   with a focus on personal sites that are meant to impress.
 
 # A shorter description for the sidebar.
-tagline:               Change `tagline` in `_config.yml`
+tagline:               无人知此意 / 歌罢满风帘
 
 # A list of keywords for your blog
-keywords:              []
+keywords:              chasiopenblog
 
 # A (square) logo for your site.
 # If provided, it will be shown at the top of the sidebar.
 # It also used by the `jekyll-seo-tag` plugin.
-logo:                  /assets/img/logo.png
+logo:                  /assets/img/logo.jpg
 
 # This should be the same author as first entry in `_data/authors.yml`.
 author:
   # Used by `jekyll-feed`:
-  name:                <firstname> <lastname>
-  email:               <mail@domain.tld>
+  name:                SIOPEN CHA
+  email:               chasiopen@qq.com
   # # Used by `jekyll-seo-tag`:
   # twitter:             <username>
 
 # Add links to the sidebar.
 menu:
-  - title:             Example
-    url:               /example/
-  - title:             Documentation
-    url:               /docs/
-  - title:             About
-    url:               /about/
+  - title: Mind | 狂涌
+    url: /mind/
+  - title: Tale | 灯火
+    url: /tale/
+  #- title:             Example
+  # url:               /example/
+  #- title:             Documentation
+  #  url:               /docs/
+  - title: About | 缘起
+    url: /about/
+  - title: WEIBOIN
+    url:  https://weibo.com/u/5501843742
 
 # Add links to the footer.
 # Typically you'll want to link to your cookie- or privacy policy (if appliable), etc..
 legal:
-  - title:             LICENSE
-    url:               /LICENSE/
-  - title:             NOTICE
-    url:               /NOTICE/
-  - title:             CHANGELOG
-    url:               /CHANGELOG/
+  - title:             README-须知
+    url:               /README-须知/
+  #- title:             LICENSE
+  #  url:               /LICENSE/
+  #- title:             NOTICE
+  #  url:               /NOTICE/
+  #- title:             CHANGELOG
+  #  url:               /CHANGELOG/
 
 # This text will appear in a `<small>` tag in the footer of every page.
-copyright:             © 2021. All rights reserved.
+copyright:             © 2022. All rights reserved.
 
 # Format of the permalinks
 permalink:             /:categories/:year-:month-:day-:title/
@@ -81,20 +89,20 @@ paginate_path:         /:num/
 # ---------------------------------------------------------------------------------------
 
 theme: jekyll-theme-hydejack
-# remote_theme: hydecorp/hydejack@v9
+#remote_theme: hydecorp/hydejack@v9.1.6
 
 
 # Customizaton
 # ----------------------------------------------------------------------------------------
  
 # Sidebar image and theme color of the site.
-accent_image:          /assets/img/sidebar-bg.jpg
-accent_color:          rgb(79,177,186)
+accent_image:          /assets/img/bg/glass+flute+final-blur.jpg
+accent_color:          rgb(242,242,242)
 
 # This is used for the `theme-color` meta tag,
 # which changes the background color of the browser UI in certain browsers.
 # Defaults to `accent_color`.
-theme_color:           rgb(25,55,71)
+theme_color:           rgb(241,190,203)
 
 # The string encoding which fonts to fetch from Google Fonts.
 # See: <https://hydejack.com/docs/configuration/>
@@ -114,6 +122,22 @@ font_code:             Fira Code, Menlo, Monaco, Consolas, monospace;
 defaults:
   # You can use this to provide a default accent color and background for
   # all pages under a given path:
+  - scope:
+      path:            mind/
+    values:
+      accent_color:    rgb(242,242,242)
+      theme_color:     rgb(241,190,203)
+      accent_image:
+        background:    rgb(252, 161, 190)
+        overlay:       false
+  - scope:
+      path:            tale/
+    values:
+      accent_color:    rgb(242,242,242)
+      theme_color:     rgb(149, 212, 235)
+      accent_image:
+        background:    rgb(209, 216, 222)
+        overlay:       false
   - scope:
       path:            hyde/
     values:
@@ -421,3 +445,5 @@ jekyll_compose:
       links:
         - title: Project Link
           url: https://example.com
+
+theme: jekyll-theme-cayman
