--- a/_config.yml
+++ b/_config.yml
@@ -89,8 +89,8 @@ paginate_path:         /:num/
 # ---------------------------------------------------------------------------------------
 
 
-theme: jekyll-theme-hydejack
-#remote_theme: hydecorp/hydejack@v9
+#theme: jekyll-theme-hydejack
+remote_theme: hydecorp/hydejack@v9
 
 
 # Customizaton
